--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,11 @@ dependencies:
   sqlite3_flutter_libs: ^0.2.0
   path: ^1.7.0
   path_provider: ^1.6.14
-  moor_ffi: ^0.8.0
-  replay_bloc: ^0.0.1-dev.2
+  undo: ^1.3.0+1
+  moor_flutter:
+  filesize: ^1.0.4
+  flutter_cache_manager: ^1.4.2
+  cached_network_image: ^2.3.2+1
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +52,7 @@ dev_dependencies:
   build_runner: ^1.10.1
   moor_generator: ^3.3.1
   build_resolvers: ^1.3.10
+  moor_ffi: ^0.8.0
 
 
 # For information on the generic Dart part of this file, see the
