--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   filesize: ^1.0.4
   flutter_cache_manager: ^1.4.2
   cached_network_image: ^2.3.2+1
+  easy_localization_loader: ^0.0.2
+  easy_localization: ^2.3.3
+  moor_ffi: ^0.8.0
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +55,7 @@ dev_dependencies:
   build_runner: ^1.10.1
   moor_generator: ^3.3.1
   build_resolvers: ^1.3.10
-  moor_ffi: ^0.8.0
+  
 
 
 # For information on the generic Dart part of this file, see the
