--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,10 @@ dependencies:
   line_icons: ^0.2.0
   content_placeholder: ^0.1.0
   flutter_rating_bar: ^3.0.1+1
+  flutter_animation_progress_bar: ^1.0.5
+  random_color: ^1.0.5
+  flutter_tags: ^0.4.9
+  lazy_load_scrollview: ^1.1.0
   flutter_localizations: 
     sdk: flutter
 
