--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_animation_progress_bar: ^1.0.5
   random_color: ^1.0.5
   lazy_load_scrollview: ^1.1.0
+  expand_widget: ^1.1.0
   flutter_localizations: 
     sdk: flutter
 
