added  chapter placeholder & real data impl

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,9 +56,10 @@ dependencies:
   flutter_animation_progress_bar: ^1.0.5
   random_color: ^1.0.5
   lazy_load_scrollview: ^1.1.0
-  expand_widget: ^1.1.0
   flutter_dropdown: ^0.0.8
-  flutter_localizations: 
+  readmore: ^1.0.0
+  photo_view: ^0.10.2
+  flutter_localizations:
     sdk: flutter
 
 dev_dependencies:
