--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -23,7 +23,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -54,15 +53,14 @@ dependencies:
   flutter_animation_progress_bar: ^1.0.5
   flutter_dropdown: ^0.0.8
   readmore: ^1.0.0
-  flutter_advanced_networkimage: ^0.7.0
   draggable_scrollbar: ^0.0.4
+  flutter_svg: ^0.18.0
   flutter_localizations:
     sdk: flutter
 
 dependency_overrides:
   image: ^2.1.18
   xml: ^4.5.1
-  flutter_svg: ^0.18.0
 
 dev_dependencies:
   flutter_test:
@@ -72,15 +70,12 @@ dev_dependencies:
   build_runner: ^1.10.1
   moor_generator: ^3.3.1
   build_resolvers: ^1.3.10
-  
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
