add refresh function

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   readmore: ^1.0.0
   draggable_scrollbar: ^0.0.4
   flutter_svg: ^0.18.0
+  flutter_downloader: ^1.5.1
   flutter_localizations:
     sdk: flutter
 
