--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,14 +1,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.mangabuzz">
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
          In most cases you can leave this as-is, but you if you want to provide
          additional functionality it is fine to subclass or reimplement
          FlutterApplication and put your custom class here. -->
+    
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application
         android:name="io.flutter.app.FlutterApplication"
         android:label="mangabuzz"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -43,5 +50,30 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        
+        <provider
+          android:name="androidx.work.impl.WorkManagerInitializer"
+          android:authorities="${applicationId}.workmanager-init"
+          tools:node="remove" />
+
+        <provider
+          android:name="vn.hunghd.flutterdownloader.FlutterDownloaderInitializer"
+          android:authorities="${applicationId}.flutter-downloader-init"
+          android:exported="false">
+          <!-- changes this number to configure the maximum number of concurrent tasks -->
+          <meta-data
+            android:name="vn.hunghd.flutterdownloader.MAX_CONCURRENT_TASKS"
+            android:value="6" />
+        </provider>  
+
+        <provider
+          android:name="vn.hunghd.flutterdownloader.DownloadedFileProvider"
+          android:authorities="${applicationId}.flutter_downloader.provider"
+          android:exported="false"
+          android:grantUriPermissions="true">
+          <meta-data
+            android:name="android.support.FILE_PROVIDER_PATHS"
+            android:resource="@xml/provider_paths"/>
+        </provider>
     </application>
 </manifest>
