--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,6 @@ dependencies:
   sqlite3_flutter_libs: ^0.2.0
   path: ^1.7.0
   path_provider: ^1.6.14
-  undo: ^1.3.0+1
   moor_flutter:
   filesize: ^1.0.4
   flutter_cache_manager: ^1.4.2
@@ -56,6 +55,9 @@ dependencies:
   draggable_scrollbar: ^0.0.4
   flutter_svg: ^0.18.0
   flutter_downloader: ^1.5.1
+  permission_handler: ^5.0.1+1
+  ext_storage: ^1.0.3
+  fluttertoast: ^7.1.1
   flutter_localizations:
     sdk: flutter
 
