--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,8 +58,8 @@ dependencies:
   permission_handler: ^5.0.1+1
   ext_storage: ^1.0.3
   fluttertoast: ^7.1.1
-  list_tile_more_customizable: ^1.3.3
-  search_page: ^1.3.0
+  url_launcher: ^5.7.2
+  cool_alert: ^1.0.1
   flutter_localizations:
     sdk: flutter
 
