--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,6 +78,12 @@ dev_dependencies:
   build_runner: ^1.10.1
   moor_generator: ^3.3.1
   build_resolvers: ^1.3.10
+  flutter_launcher_icons: ^0.8.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "resources/img/icons.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
