dependency injection implementations

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,7 @@ dependencies:
   shared_preferences: ^0.5.12
   auto_size_text: ^2.1.0
   flutter_slidable: ^0.5.7
+  get_it: ^5.0.1
   flutter_localizations:
     sdk: flutter
 
