--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,16 +31,15 @@ dependencies:
   flutter_bloc: ^6.0.5
   http: ^0.12.2
   dartz: ^0.9.1
-  connectivity: ^0.4.9+2
+  connectivity: ^0.4.9+5
   equatable: ^1.2.5
   moor: ^3.3.1
   sqlite3_flutter_libs: ^0.2.0
   path: ^1.7.0
   path_provider: ^1.6.14
   moor_flutter:
-  filesize: ^1.0.4
-  flutter_cache_manager: ^1.4.2
-  cached_network_image: ^2.3.2+1
+  flutter_cache_manager: ^2.0.0
+  cached_network_image: ^2.3.3
   moor_ffi: ^0.8.0
   flutter_screenutil: ^3.0.2
   carousel_slider: ^2.2.1
@@ -53,23 +52,20 @@ dependencies:
   flutter_dropdown: ^0.0.8
   readmore: ^1.0.0
   draggable_scrollbar: ^0.0.4
-  flutter_svg: ^0.18.0
   flutter_downloader: ^1.5.1
   permission_handler: ^5.0.1+1
   ext_storage: ^1.0.3
   fluttertoast: ^7.1.1
-  url_launcher: ^5.7.2
+  url_launcher: ^5.7.5
   cool_alert: ^1.0.1
   shared_preferences: ^0.5.12
   auto_size_text: ^2.1.0
   flutter_slidable: ^0.5.7
   get_it: ^5.0.1
+  easy_localization: ^2.3.3
+  easy_localization_loader: ^0.0.2
   flutter_localizations:
     sdk: flutter
-
-dependency_overrides:
-  image: ^2.1.18
-  xml: ^4.5.1
 
 dev_dependencies:
   flutter_test:
@@ -98,8 +94,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - resources/img/
-    - resources/langs/
+    - resources/img/error.png
+    - resources/img/icons.png
+    - resources/img/ReadingDoodle.png
+    - resources/langs/langs.csv
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
