--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.1+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -42,7 +42,7 @@ dependencies:
   cached_network_image: ^2.3.3
   moor_ffi: ^0.8.0
   flutter_screenutil: ^3.1.1
-  carousel_slider: ^2.2.1
+  carousel_slider: ^2.3.1
   smooth_page_indicator: ^0.2.0
   google_nav_bar: ^3.0.1
   line_icons: ^0.2.0
@@ -52,10 +52,7 @@ dependencies:
   flutter_dropdown: ^0.0.8
   readmore: ^1.0.0
   draggable_scrollbar: ^0.0.4
-  flutter_downloader: ^1.5.1
   permission_handler: ^5.0.1+1
-  ext_storage: ^1.0.3
-  fluttertoast: ^7.1.1
   url_launcher: ^5.7.5
   cool_alert: ^1.0.1
   shared_preferences: ^0.5.12
@@ -66,6 +63,11 @@ dependencies:
   easy_localization_loader: ^0.0.2
   flutter_localizations:
     sdk: flutter
+
+dependency_overrides:
+  image: ^2.1.18
+  xml: ^4.5.1
+  flutter_svg: ^0.18.0
 
 dev_dependencies:
   flutter_test:
@@ -94,9 +96,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - resources/img/error.png
-    - resources/img/icons.png
-    - resources/img/ReadingDoodle.png
+    - resources/img/
     - resources/langs/langs.csv
 
   # An image asset can refer to one or more resolution-specific "variants", see
